Fix alignment of the social media icons

--- a/css/main.css
+++ b/css/main.css
@@ -72,8 +72,8 @@ footer {
 }
 
 .social a img {
-  max-width: 60px;
-  min-width: 50px;
+  max-width: 50px;
+  min-width: 40px;
 }
 
 .cat {
@@ -229,6 +229,11 @@ a {
 
   .contact-wrapper {
     float: right;
+  }
+
+  .social a img {
+    max-width: 60px;
+    min-width: 50px;
   }
 
 }
